--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -292,7 +292,7 @@ bullet.pm-attraction-radius = [stat]{0}[lightgray] радиус притяжен
 ## Settings
 
 setting.pm-title = Progressed Materials
-setting.pm-swordopacity.name = Прозрачность Меча
+setting.pm-sword-opacity.name = Прозрачность Меча
 setting.pm-strobespeed.name = Скорость стробоскопа
 setting.pm-tesla-range.name = Отображать радиус теслы при атаке
 
