It is time for a rename.
Hm if I don't announce this I wonder of anyone will notice.

--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -289,7 +289,7 @@ bullet.pm-attraction-radius = [stat]{0}[lightgray] радиус притяжен
 
 ## Settings
 
-setting.pm-title = Progressed Materials
+setting.pm-title = Progression Ministry
 setting.pm-sword-opacity.name = Прозрачность Меча
 setting.pm-strobespeed.name = Скорость стробоскопа
 setting.pm-tesla-range.name = Отображать радиус теслы при атаке
@@ -307,4 +307,4 @@ mod.prog-mats-contributor.5 = [#FCC21B]GlennFolker[] (Альфатестер)
 mod.prog-mats-contributor.6 = [#FCC21B]lordReddx[] (русский перевод)
 mod.prog-mats-contributor.7 = Некоторые звуки из [#FCC21B]Freesound[].
 mod.prog-mats-contributor.8 = Все, у кого я украл код.
-mod.prog-mats.description = Progressed Materials, но теперь и на Java. Мой основной Mindustry мод, который в основном добавляет турели. Я просто экспериментирую с тем, что я могу сделать с силой которой обладаю.\n\nНазвание никак не состоит из синонимов "Advance" и "Content".
+mod.prog-mats.description = This mod is mostly just turrets. It's just me having fun with what I can create with the power of Java.
