--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -196,7 +196,7 @@ block.prog-mats-empty-nuke.name = Порожній ядерний ракетни
 block.prog-mats-empty-nuke.description = Порожній ядерний снаряд [red]балістичної ракети[].
 block.prog-mats-basic-nuke.name = Базова ядерна бомба
 block.prog-mats-basic-nuke.description = [red]Балістична ракета[], що використовується баштою [red]триниті[] для бомбардування ворогів. Вибухає при приземленні, завдаючи неймовірної шкоди.
-block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM! [] Це заклинання, що змушує людину, яка це вимовила\n[red]в и б у х н у т и[].
+block.prog-mats-basic-nuke.details = [red]ПЕТРИФІКУС САМОЗАЙМАНУС! [] Це заклинання, що змушує людину, яка це вимовила\n[red]в и б у х н у т и[].
 block.prog-mats-cluster-nuke.name = Касетна ядерна бомба
 block.prog-mats-cluster-nuke.description = [red]Балістична ракета[] використовується баштою [red]триниті[] для бомбардування ворогів. Розколюється перед приземленням, створюючи численні удари, які завдають великої шкоди.
 block.prog-mats-send-help.name = Творча ядерна бомба
