Rebrand to Meepscellanious Concepts

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -469,7 +469,7 @@ pm-size.large.amount = [accent]Великі кріплення: [lightgray]{0}
 
 ## Settings
 
-setting.pm-title = Progression Ministry
+setting.pm-title = Meepscillanious Concepts
 setting.pm-sword-opacity.name = Непрозорість меча
 setting.pm-zone-opacity.name = Непрозорість зони
 setting.pm-strobespeed.name = Швидкість блоків пісочниці
@@ -481,18 +481,18 @@ setting.pm-farting.description = Для застосування змін пот
 
 ## Mod
 
-mod.prog-mats.author = [#FCC21B]Творець:\n        MEEP of Faith[]
-mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (спрайт маскараду)
-mod.prog-mats-contributor.1 = [#FCC21B]Goober[] (спрайти для куґельбліца та екскалібура)
-mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (спрайт ракетної башта, нова іконка)
-mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (зростання шкоди для хаосу)
-mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (спрайт для сержанта)
-mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (повторний спрайт монтажника ракет)
-mod.prog-mats-contributor.6 = [#FCC21B]Memedustry[] (спрайт розрізу)
-mod.prog-mats-contributor.7 = [#FCC21B]BlueWolf[] (спрайти модульних баз та відскоку)
-mod.prog-mats-contributor.8 = [#FCC21B]lordReddx[] (рос. переклад)
-mod.prog-mats-contributor.9 = [#FCC21B]xStaBUx[] (український переклад)
-mod.prog-mats-contributor.10 = [#FCC21B]Prosta4ok_ua[] (редагування українського перекладу)
-mod.prog-mats-contributor.11 = Деякі звуки з [#FCC21B]Freesound[].
+mod.prog-mats.author = [#4a6de5]Творець:\n        MEEP of Faith[]
+mod.prog-mats-contributor.0 = [#4a6de5]ThirstyBoi[] (спрайт маскараду)
+mod.prog-mats-contributor.1 = [#4a6de5]Goober[] (спрайти для куґельбліца та екскалібура)
+mod.prog-mats-contributor.2 = [#4a6de5]VozDuh[] (спрайт ракетної башта, нова іконка)
+mod.prog-mats-contributor.3 = [#4a6de5]Ilya246[] (зростання шкоди для хаосу)
+mod.prog-mats-contributor.4 = [#4a6de5]Kapzduke[] (спрайт для сержанта)
+mod.prog-mats-contributor.5 = [#4a6de5]TheMalaysianDude[] (повторний спрайт монтажника ракет)
+mod.prog-mats-contributor.6 = [#4a6de5]Memedustry[] (спрайт розрізу)
+mod.prog-mats-contributor.7 = [#4a6de5]BlueWolf[] (спрайти модульних баз та відскоку)
+mod.prog-mats-contributor.8 = [#4a6de5]lordReddx[] (рос. переклад)
+mod.prog-mats-contributor.9 = [#4a6de5]xStaBUx[] (український переклад)
+mod.prog-mats-contributor.10 = [#4a6de5]Prosta4ok_ua[] (редагування українського перекладу)
+mod.prog-mats-contributor.11 = Деякі звуки з [#4a6de5]Freesound[].
 mod.prog-mats-contributor.12 = Усі, у кого я вкрав код.
 mod.prog-mats.description = Цей мод здебільшого додає лише башти. Я просто розважаюся з можливостями Java.
